Merged revisions 72273 via svnmerge from svn+ssh://pythondev@svn.python.org/python/trunk

........
  r72273 | hirokazu.yamamoto | 2009-05-04 14:28:39 +0900 | 1 line

  Issue #5913: os.listdir() should fail for empty path on windows.
........